fix z-index

--- a/css/lab4.css
+++ b/css/lab4.css
@@ -34,10 +34,6 @@ nav {
     max-width: fit-content;
 }
 
-section {
-    z-index: 2;
-}
-
 main {
     display: flex;
 }
@@ -72,6 +68,7 @@ main aside {
     position: absolute;
     bottom: 5px;
     left: 5px;
+    z-index: 2;
 }
 
 .me img {
